force-app/main/default/objects/Distributor_Order_Item__c/Distributor_Order_Item__c.object-meta.xml
<CustomObject>
    <label>Distributor Order Item</label>
    <nameField>
        <displayFormat>DO-{0000}</displayFormat>
        <label>Distributor Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>