force-app/main/default/objects/Distributor_Order_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Custom_Product__c</referenceTo>
    <relationshipLabel>Distributor Order Items</relationshipLabel>
    <relationshipName>Distributor_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>