force-app/main/default/objects/Distributor_Order_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Specifies how many units of the product are included in this item. Essential for order fulfillment and pricing calculations.</description>
    <label>Quantity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>