force-app/main/default/objects/Distributor_Order_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>IF(
  OR( ISBLANK(Unit_Price__c), ISBLANK(Quantity__c) ),
  0,
  Unit_Price__c * Quantity__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>