force-app/main/default/objects/Distributor_Order_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Price per unit of the product ordered. Important for calculating cost and total pricing.</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>