force-app/main/default/objects/Distributor_Order_Item__c/validationRules/Quantity_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Quantity_Greater_Than_Zero</description>
    <errorConditionFormula>Quantity__c  &gt; 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>