force-app/main/default/objects/Distributor_Order_Item__c/validationRules/Unit_Price_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price_Non_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c  &gt; 0</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Unit Price cannot be negative</errorMessage>
</ValidationRule>